# galemind-preventive-maintenance-demo

./: .gitignore  Dockerfile.triton  README.md  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml  test_triton.py
2020-03-19/: S1.csv  Y1.csv  Z2.csv
config/: config.pbtxt
model/: README.md
model/anomaly_detector_json/: config.pbtxt
model/anomaly_detector_json/1/: model.py
model/anomaly_detector_json/1/src/cli/: main.py
model/anomaly_detector_numpy/: config.pbtxt
model/anomaly_detector_numpy/1/: model.py  requirements.txt
model/anomaly_detector_numpy/1/src/data_generation/: syntetic.py
model/anomaly_detector_numpy/1/src/model/: pipeline.py
src/cli/: main.py
src/data_generation/: syntetic.py
src/model/: anomaly.py  pipeline.py  predictive_model.py
tests/: test_anomaly.py  test_triton_numpy.py
